--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -6,7 +6,11 @@
 +media-breakpoint-down(xl)
 +media-breakpoint-down(lg)
 +media-breakpoint-down(md)
+	.member
+		margin: 30px auto
 +media-breakpoint-down(sm)
+	.member
+		margin: 15px auto
 +media-breakpoint-down(xs)
 
 
