--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,5 +1,5 @@
 $default-font: "Lato", sans-serif
-$accent: orange
+$accent: rgba(22, 160, 134, 1)
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px
