--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -46,7 +46,7 @@ body
 		h2, h2 + p
 			color: #fff
 			margin: 0
-			padding: 0x
+			padding: 0
 		h2
 			margin-top: 57px
 			margin-bottom: 18px
@@ -103,6 +103,170 @@ body
 	.fab:hover
 		color: red
 
+header
+	height: 90px
+	a
+		color: inherit
+		&:hover
+			text-decoration: none
+			color: inherit
+	.logo
+		margin-left: 50px
+		margin-top: 33px
+		position: relative
+		font-size: 20px
+		font-weight: bold
+
+		
+		&-top
+			margin-left: 50px
+			font-size: 14px	
+		
+		&:before
+			content: ''
+			width: 100px
+			position: absolute
+			left: -60px
+			top: -5px
+			height: 100px
+			background-size: cover
+			background: url('../img/b-logo.png') no-repeat
+	ul
+		margin: 0
+		padding: 0
+		list-style-type: none
+		li
+			display: inline-block
+			position: relative
+			&:first-of-type
+				margin-left: 25px
+			a
+				line-height: 90px
+				color: #333333
+				padding: 15px 15px
+				transition: background-color 0.5s ease
+				&:hover
+					background-color: rgba($accent, .9)
+					color: #fff
+					text-decoration: none
+					
+.header-wrapper
+	height: 450px
+	object-fit: cover
+	background: #fff url(../img/jumbotron.jpg) 50% 50% no-repeat
+	h1, h1 + p
+		color: #fff
+		font-weight: 400
+		margin: 0
+		padding: 0
+		span
+			font-weight: bold
+	h1
+		font-size: 55px
+		margin: 80px auto 45px
+		+ p
+			font-size: 18px
+			margin-bottom: 50px
+
+.button
+	color: #fff
+	padding: 13px 20px
+	background-color: $accent
+	display: inline-block
+	margin-bottom: 43px
+	transition: background-color 0.5s ease
+	&:hover
+		background-color: lighten($accent, 10%)
+	&:after
+		content: "\f13a:
+		font-family: fontawesome
+		width: 50px
+		height: 50px
+.arrow
+	font-size: 50px
+	color: #fff
+	width: 100%
+	display: inline-block
+	&:hover
+		color: $accent
+
+
+.portfolio
+	.container
+
+
+		h2, h2 + p
+			margin: 0
+			padding: 0
+		h2 + p
+			margin-bottom: 40px
+		h2
+			margin-top: 57px
+			margin-bottom: 18px
+		ul
+			list-style-type: none			
+			li
+				text-transform: uppercase
+				display: inline-block
+				a
+					color: #fff
+					padding: 
+	&-button
+		color: #fff
+		padding: 10px 10px
+		margin-left: 15px
+		background-color: $accent
+		display: inline-block
+		margin-bottom: 43px
+		transition: background-color 0.5s ease
+		&:hover
+			background-color: lighten($accent, 10%)	
+			text-decoration: none
+			
+	.port
+		position: relative
+		cursor: pointer	
+		margin-bottom: 34px
+		.search
+			position: absolute
+			color: #fff
+			// width: 180px
+			// height: 180px
+			top: 50%
+			left: 50%
+			transform: translate(-50%, -50%)
+			opacity: 0
+		&:before
+			content: ''
+			background-color: $accent
+			width: 180px
+			height: 180px
+			border-radius: 10em
+			position: absolute
+			opacity: 0
+			transition: opacity 0.5s ease
+		&:hover:before, .search:hover
+			opacity: 1
+
+.contact
+	.container
+		background-color: #ecf0f1
+
+		h2, h2 + p
+			margin: 0
+			padding: 0
+		h2 + p
+			margin-bottom: 80px
+		h2
+			margin-top: 55px
+			margin-bottom: 20px
+		p
+			font-size: 14px
+			padding-left: 10px
+			width: 300px
+			display: block
+			
+			.fas
 
 
 
